P2Pmsgcore/native/P2Pmsgcore_c.h

typedef void* P2PeerMsgHandle;
typedef void* P2PeerConWsaHandle;
P2PC_API int              p2peermsg_is_reflected   (P2PeerMsgHandle h);
// Returns a newly allocated P2PeerMsg that the caller is responsible for destroying.
P2PC_API P2PeerMsgHandle  p2peermsg_response_factory    (P2PeerMsgHandle h,
                                                          const wchar_t* msgID,
                                                          const void* data,
                                                          unsigned short dataSize);
P2PC_API P2PeerMsgHandle  p2peermsg_redirect_factory    (P2PeerMsgHandle h,
                                                          const wchar_t* dstAddr);
// ── P2PeerConWsa ──────────────────────────────────────────────────────────────
// Client connection: active outbound TCP connect
P2PC_API P2PeerConWsaHandle p2peerconwsa_client_factory   (const wchar_t* strThatAddr,
                                                            const wchar_t* ipAddress,
                                                            short          port);
// Service connection: passive inbound TCP listen
P2PC_API P2PeerConWsaHandle p2peerconwsa_service_factory  (const wchar_t* strThatAddr,
                                                            short          port);
P2PC_API void               p2peerconwsa_destroy          (P2PeerConWsaHandle h);