P2Pmsgcore/java/src/main/java/com/p2pmsgcore/native_/P2Pmsgcore_c.java


    private static class p2peermsg_is_reflected {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_INT,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_is_reflected").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int p2peermsg_is_reflected(P2PeerMsgHandle h)
     * }
     */
    public static FunctionDescriptor p2peermsg_is_reflected$descriptor() {
        return p2peermsg_is_reflected.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int p2peermsg_is_reflected(P2PeerMsgHandle h)
     * }
     */
    public static MethodHandle p2peermsg_is_reflected$handle() {
        return p2peermsg_is_reflected.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int p2peermsg_is_reflected(P2PeerMsgHandle h)
     * }
     */
    public static MemorySegment p2peermsg_is_reflected$address() {
        return p2peermsg_is_reflected.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int p2peermsg_is_reflected(P2PeerMsgHandle h)
     * }
     */
    public static int p2peermsg_is_reflected(MemorySegment h) {
        var mh$ = p2peermsg_is_reflected.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_is_reflected", h);
            }
            return (int)mh$.invokeExact(h);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_response_factory {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_SHORT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_response_factory").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_response_factory(P2PeerMsgHandle h, const wchar_t *msgID, const void *data, unsigned short dataSize)
     * }
     */
    public static FunctionDescriptor p2peermsg_response_factory$descriptor() {
        return p2peermsg_response_factory.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_response_factory(P2PeerMsgHandle h, const wchar_t *msgID, const void *data, unsigned short dataSize)
     * }
     */
    public static MethodHandle p2peermsg_response_factory$handle() {
        return p2peermsg_response_factory.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_response_factory(P2PeerMsgHandle h, const wchar_t *msgID, const void *data, unsigned short dataSize)
     * }
     */
    public static MemorySegment p2peermsg_response_factory$address() {
        return p2peermsg_response_factory.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_response_factory(P2PeerMsgHandle h, const wchar_t *msgID, const void *data, unsigned short dataSize)
     * }
     */
    public static MemorySegment p2peermsg_response_factory(MemorySegment h, MemorySegment msgID, MemorySegment data, short dataSize) {
        var mh$ = p2peermsg_response_factory.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_response_factory", h, msgID, data, dataSize);
            }
            return (MemorySegment)mh$.invokeExact(h, msgID, data, dataSize);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peermsg_redirect_factory {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peermsg_redirect_factory").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_redirect_factory(P2PeerMsgHandle h, const wchar_t *dstAddr)
     * }
     */
    public static FunctionDescriptor p2peermsg_redirect_factory$descriptor() {
        return p2peermsg_redirect_factory.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_redirect_factory(P2PeerMsgHandle h, const wchar_t *dstAddr)
     * }
     */
    public static MethodHandle p2peermsg_redirect_factory$handle() {
        return p2peermsg_redirect_factory.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_redirect_factory(P2PeerMsgHandle h, const wchar_t *dstAddr)
     * }
     */
    public static MemorySegment p2peermsg_redirect_factory$address() {
        return p2peermsg_redirect_factory.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PeerMsgHandle p2peermsg_redirect_factory(P2PeerMsgHandle h, const wchar_t *dstAddr)
     * }
     */
    public static MemorySegment p2peermsg_redirect_factory(MemorySegment h, MemorySegment dstAddr) {
        var mh$ = p2peermsg_redirect_factory.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peermsg_redirect_factory", h, dstAddr);
            }
            return (MemorySegment)mh$.invokeExact(h, dstAddr);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_client_factory {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_SHORT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_client_factory").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PeerConWsaHandle p2peerconwsa_client_factory(const wchar_t *strThatAddr, const wchar_t *ipAddress, short port)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_client_factory$descriptor() {
        return p2peerconwsa_client_factory.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PeerConWsaHandle p2peerconwsa_client_factory(const wchar_t *strThatAddr, const wchar_t *ipAddress, short port)
     * }
     */
    public static MethodHandle p2peerconwsa_client_factory$handle() {
        return p2peerconwsa_client_factory.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PeerConWsaHandle p2peerconwsa_client_factory(const wchar_t *strThatAddr, const wchar_t *ipAddress, short port)
     * }
     */
    public static MemorySegment p2peerconwsa_client_factory$address() {
        return p2peerconwsa_client_factory.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PeerConWsaHandle p2peerconwsa_client_factory(const wchar_t *strThatAddr, const wchar_t *ipAddress, short port)
     * }
     */
    public static MemorySegment p2peerconwsa_client_factory(MemorySegment strThatAddr, MemorySegment ipAddress, short port) {
        var mh$ = p2peerconwsa_client_factory.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_client_factory", strThatAddr, ipAddress, port);
            }
            return (MemorySegment)mh$.invokeExact(strThatAddr, ipAddress, port);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_service_factory {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_POINTER,
            P2Pmsgcore_c.C_SHORT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_service_factory").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * P2PeerConWsaHandle p2peerconwsa_service_factory(const wchar_t *strThatAddr, short port)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_service_factory$descriptor() {
        return p2peerconwsa_service_factory.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * P2PeerConWsaHandle p2peerconwsa_service_factory(const wchar_t *strThatAddr, short port)
     * }
     */
    public static MethodHandle p2peerconwsa_service_factory$handle() {
        return p2peerconwsa_service_factory.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * P2PeerConWsaHandle p2peerconwsa_service_factory(const wchar_t *strThatAddr, short port)
     * }
     */
    public static MemorySegment p2peerconwsa_service_factory$address() {
        return p2peerconwsa_service_factory.ADDR;
    }

    /**
     * {@snippet lang=c :
     * P2PeerConWsaHandle p2peerconwsa_service_factory(const wchar_t *strThatAddr, short port)
     * }
     */
    public static MemorySegment p2peerconwsa_service_factory(MemorySegment strThatAddr, short port) {
        var mh$ = p2peerconwsa_service_factory.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("p2peerconwsa_service_factory", strThatAddr, port);
            }
            return (MemorySegment)mh$.invokeExact(strThatAddr, port);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class p2peerconwsa_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            P2Pmsgcore_c.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.find("p2peerconwsa_destroy").orElseThrow();

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void p2peerconwsa_destroy(P2PeerConWsaHandle h)
     * }
     */
    public static FunctionDescriptor p2peerconwsa_destroy$descriptor() {
        return p2peerconwsa_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void p2peerconwsa_destroy(P2PeerConWsaHandle h)
     * }
     */
    public static MethodHandle p2peerconwsa_destroy$handle() {
        return p2peerconwsa_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void p2peerconwsa_destroy(P2PeerConWsaHandle h)
     * }
     */
    public static MemorySegment p2peerconwsa_destroy$address() {
        return p2peerconwsa_destroy.ADDR;
    }
